# illegal-parking-reporter

./: .gitignore  AI_PROMPT.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: MODELS.md  ROADMAP.md  SETUP.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: .gitkeep
src-tauri/src/: diagnostic.rs  lib.rs  main.rs
src-tauri/src/ai/: judge.rs  mod.rs  model_path.rs  plate.rs  sidewalk.rs  vehicle.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: auth.rs  detection.rs  diag.rs  export.rs  mod.rs  pipeline.rs  system.rs  video.rs
src-tauri/src/db/: events.rs  jobs.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/evidence/: builder.rs  csv_index.rs  exporter.rs  html_guide.rs  mod.rs
src-tauri/src/models/: detection.rs  event.rs  job.rs  mod.rs  observation.rs
src-tauri/src/pipeline/: aggregate.rs  mod.rs  orchestrator.rs  parallel.rs
src-tauri/src/video/: clip.rs  extract.rs  metadata.rs  mod.rs  watermark.rs
src/api/: auth.ts  detection.ts  pipeline.ts  system.ts  video.ts
src/components/: AppShell.vue  FirstRunWizard.vue  LockScreen.vue
src/composables/: useReviewShortcuts.ts
src/router/: index.ts
src/stores/: settings.ts
src/views/: AboutView.vue  EventsView.vue  ExportView.vue  HomeView.vue  ProcessView.vue  ProcessingView.vue  ReviewView.vue  SettingsView.vue  UploadHelperView.vue  UploadView.vue
