[package]
name = "illegal-parking-reporter"
version = "0.1.0"
description = "路况记录助手 - 桌面端违停证据包生成器"
authors = ["zhoukekestar"]
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "illegal_parking_reporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步运行时 (Tauri 已内置, 但显式声明便于其他模块用)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# AI 推理
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "coreml", "ndarray"] }
ndarray = "0.16"

# 图像处理
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# 工具
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
