[package]
name = "illegal-parking-reporter"
version = "0.1.0"
description = "路况记录助手 - 桌面端违停证据包生成器"
authors = ["zhoukekestar"]
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "illegal_parking_reporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步运行时 (Tauri 已内置, 但显式声明便于其他模块用)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# AI 推理
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "coreml", "ndarray"] }
ndarray = "0.16"

# 图像处理
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# 视频处理 (P1 起): 抽帧 / 元数据 / 剪辑
# 与系统 ffmpeg 8.1 (libavutil 60.x / libavcodec 62.x) 严格对应
ffmpeg-next = "8"

# SQLite + SQLCipher (P6: 加密本地数据库)
# bundled-sqlcipher-vendored-openssl: SQLCipher + OpenSSL 都内置编译, 零外部依赖
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

# 密码哈希 (P6)
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# 工具
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
